[gd_scene load_steps=6 format=3 uid="uid://0q7rclgxesym"]

[ext_resource type="Script" uid="uid://ccom5gxlsq228" path="res://scripts/first_person_player_controller.gd" id="1_tb6uh"]
[ext_resource type="Script" uid="uid://bjpmu5sklv5h8" path="res://addons/raytraced_audio/raytraced_audio_listener.gd" id="2_gpdnb"]
[ext_resource type="PackedScene" uid="uid://bf3vwliq6lo2e" path="res://scenes/player_state.tscn" id="3_tlelo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_buufc"]
radius = 0.25

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_chgp1"]

[node name="PlayerController" type="CharacterBody3D"]
collision_layer = 129
collision_mask = 13
wall_min_slide_angle = 1.0472
floor_max_angle = 1.0472
script = ExtResource("1_tb6uh")

[node name="PlayerState" parent="." instance=ExtResource("3_tlelo")]

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_buufc")

[node name="Noise" type="AudioStreamPlayer" parent="."]
pitch_scale = 0.01
autoplay = true

[node name="StepSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.05893, 0)
volume_db = -16.203

[node name="CameraRoot" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 2.9802322e-08, -7.450581e-09, 0, 1, -3.7252903e-09, 3.7252903e-09, -7.450581e-09, 0.99999994, 0, 0.75, 0)

[node name="TargetHandPosition" type="Node3D" parent="CameraRoot"]
transform = Transform3D(0.512495, 0.041758984, -0.857674, 0.835908, 0.204287, 0.509435, 0.19648503, -0.97802013, 0.069789015, -0.48641396, -0.408851, -0.52876306)

[node name="PersonalLight" type="OmniLight3D" parent="CameraRoot"]
transform = Transform3D(1, -2.9802322e-08, 7.4505815e-09, -1.387779e-17, 1, 3.7252907e-09, -3.7252907e-09, 7.4505815e-09, 1.0000001, 0, 0, 0)
light_energy = 0.014
omni_range = 4.612
omni_attenuation = 2.0

[node name="Camera" type="Camera3D" parent="CameraRoot"]
unique_name_in_owner = true
transform = Transform3D(1, -2.9802322e-08, 7.4505815e-09, -1.387779e-17, 1, 3.7252907e-09, -3.7252907e-09, 7.4505815e-09, 1.0000001, 0, 0, 0)
fov = 90.0

[node name="Ears" type="AudioListener3D" parent="CameraRoot/Camera"]
unique_name_in_owner = true
current = true
script = ExtResource("2_gpdnb")
metadata/_custom_type_script = "uid://bjpmu5sklv5h8"

[node name="hand_model" type="Node3D" parent="."]
transform = Transform3D(0.512495, 0.041759, -0.857674, 0.835908, 0.204287, 0.509435, 0.196485, -0.97802, 0.069789, -0.486414, 0.341149, -0.528763)

[node name="Hand" type="Marker3D" parent="hand_model"]
unique_name_in_owner = true
transform = Transform3D(0.295822, 0.901704, -0.315309, 0.494769, -0.42699, -0.756892, -0.817126, 0.0678997, -0.572447, 0.125454, 0.174209, 0.114579)

[node name="HandContainer" type="Node3D" parent="hand_model"]
editor_description = "This hold all invisible items."

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StaminaBar" type="TextureProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.925
anchor_right = 0.75
anchor_bottom = 0.935
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.01
value = 0.5
nine_patch_stretch = true
texture_progress = SubResource("PlaceholderTexture2D_chgp1")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
